--- a/isletrains.css
+++ b/isletrains.css
@@ -98,6 +98,11 @@ html {
 
 /* Player Tableau Layout */
 .iot-player-tableau {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 25px;
     width: 100%;
 }
 
@@ -113,6 +118,14 @@ html {
     margin-top: -15px;
     margin-left: 15px;
     padding-left: 20px;
+}
+
+.iot-player-info-column {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
 }
 
 .iot-points-container {
@@ -211,6 +224,13 @@ div.iot-passenger:hover {
     z-index: 100;
 }
 
+.iot-passenger-6 { background-position: 0 0; }
+.iot-passenger-4 { background-position: 50% 0; }
+.iot-passenger-2 { background-position: 100% 0; }
+.iot-passenger-1 { background-position: 0 100%; }
+.iot-passenger-5 { background-position: 50% 100%; }
+.iot-passenger-3 { background-position: 100% 100%; }
+
 /* Passenger Bag */
 .iot-passenger-bag {
     display: inline-block;
@@ -227,11 +247,6 @@ div.iot-passenger:hover {
     width: 88px;
     height: 81px;
     background-image: url('img/iotPointSymbol.png');
-}
-
-div.iot-point-symbol:hover {
-    transform: scale(1.05);
-    z-index: 100;
 }
 
 /* Progress Track */
