--- a/isletrains.css
+++ b/isletrains.css
@@ -77,6 +77,53 @@ html {
     gap: 20px;
 }
 
+/* Cards Panel */
+#iot_cards_panel {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#iot_deck {
+    --gap: -350px;
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    margin-left: calc(-1 * var(--gap));
+}
+
+#iot_deck > * {
+    margin-left: var(--gap);
+    transform: unset !important;
+    z-index: unset !important;
+    order: unset !important
+}
+
+#iot_card_display {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#iot_discard {
+    --gap: -346px;
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    margin-left: calc(-1 * var(--gap));
+}
+
+#iot_discard > * {
+    margin-left: var(--gap);
+    transform: unset !important;
+    z-index: unset !important;
+    order: unset !important
+}
+
 /* Island Layout */
 #iot_island {
     display: grid;
@@ -96,6 +143,16 @@ html {
     padding: 5px;
 }
 
+/* Player Hand Layout */
+#iot_current_player_hand {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+    width: 99%;
+}
+
 /* Player Tableau Layout */
 .iot-player-tableau {
     display: flex;
@@ -103,7 +160,7 @@ html {
     justify-content: flex-start;
     align-items: center;
     gap: 25px;
-    width: 100%;
+    width: 99%;
 }
 
 .iot-player-header {
@@ -144,6 +201,13 @@ html {
     text-shadow: .05rem 0 .05rem whitesmoke, 0 -.05rem .05rem whitesmoke, 0 .05rem .05rem whitesmoke, -.05rem 0 .05rem whitesmoke;
 }
 
+.iot-player-train {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 /* Progress Track Layout */
 #iot_progress_track_space_0 { left: -100px; position: relative; }
 #iot_progress_track_space_1 { left: 25px; position: relative; }
@@ -159,6 +223,68 @@ html {
     color: whitesmoke;
     text-shadow: .05rem 0 .05rem lightslategray, 0 -.05rem .05rem lightslategray, 0 .05rem .05rem lightslategray, -.05rem 0 .05rem lightslategray;
 }
+
+/* Cards */
+.iot-card {
+    display: inline-block;
+    position: relative;
+    width: 346px;
+    height: 247px;
+    border-radius: 10px;
+    border: 1px solid;
+    box-shadow: 1px 1px 1px 0 #000000a0;
+    background-image: url('img/iotTrainCards.png');
+}
+
+div.iot-card:hover {
+    transform: scale(1.05);
+    z-index: 100;
+}
+
+.iot-card-1-1 { background-position: 20% 83.33%; }
+.iot-card-1-2 { background-position: 40% 83.33%; }
+.iot-card-1-3 { background-position: 60% 83.33%; }
+.iot-card-1-4 { background-position: 100% 16.67%; }
+
+.iot-card-2-1 { background-position: 0 0; }
+.iot-card-2-2 { background-position: 20% 0; }
+.iot-card-2-3 { background-position: 0 16.67%; }
+
+.iot-card-3-1 { background-position: 80% 50%; }
+.iot-card-3-2 { background-position: 80% 66.67%; }
+.iot-card-3-3 { background-position: 0 83.33%; }
+
+.iot-card-4-1 { background-position: 80% 83.33%; }
+.iot-card-4-2 { background-position: 0 100%; }
+.iot-card-4-3 { background-position: 20% 100%; }
+
+.iot-card-5-1 { background-position: 40% 100%; }
+.iot-card-5-2 { background-position: 60% 100%; }
+.iot-card-5-3 { background-position: 80% 100%; }
+
+.iot-card-6-1 { background-position: 60% 16.67%; }
+.iot-card-6-2 { background-position: 60% 33.33%; }
+.iot-card-6-3 { background-position: 60% 50%; }
+.iot-card-6-4 { background-position: 0 66.67%; }
+.iot-card-6-5 { background-position: 20% 66.67%; }
+.iot-card-6-6 { background-position: 40% 66.67%; }
+.iot-card-6-7 { background-position: 60% 66.67%; }
+.iot-card-6-8 { background-position: 80% 0; }
+.iot-card-6-9 { background-position: 80% 16.67%; }
+.iot-card-6-10 { background-position: 80% 33.33%; }
+
+.iot-card-7-1 { background-position: 20% 16.67%; }
+.iot-card-7-2 { background-position: 40% 0; }
+.iot-card-7-3 { background-position: 40% 16.67%; }
+.iot-card-7-4 { background-position: 0 33.33%; }
+.iot-card-7-5 { background-position: 20% 33.33%; }
+.iot-card-7-6 { background-position: 40% 33.33%; }
+.iot-card-7-7 { background-position: 0 50%; }
+.iot-card-7-8 { background-position: 20% 50%; }
+.iot-card-7-9 { background-position: 40% 50%; }
+.iot-card-7-10 { background-position: 60% 0; }
+
+.iot-card-back { background-position: 100% 0; }
 
 /* Destination Tiles */
 .iot-destination-tile {
