--- a/isletrains.css
+++ b/isletrains.css
@@ -77,25 +77,52 @@ html {
     gap: 20px;
 }
 
-/* Cards Panel */
-#iot_cards_panel {
+/* Top Panel */
+#iot_top_panel {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    margin-top: 15px;
+}
+
+#iot_progress_island_panel {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+}
+
+/* Cards Panel */
+#iot_deck_display_panel {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+    margin-left: 30px;
+}
+
+#iot_cards_panel {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 }
 
 #iot_deck_container {
     display: grid;
     position: relative;
-    width: 350px;
-    height: 247px;
+    width: 263px;
+    height: 182px;
     place-content: center;
 }
 
 #iot_deck {
-    --gap: -350px;
+    --gap: -263px;
     position: relative;
     display: flex;
     flex-flow: row wrap;
@@ -106,13 +133,20 @@ html {
     margin-left: var(--gap);
     transform: unset !important;
     z-index: unset !important;
-    order: unset !important
+}
+
+#iot_deck_counter_container {
+    display: grid;
+    position: relative;
+    width: 262px;
+    height: 183px;
+    order: 1 !important;
+    place-content: center;
 }
 
 #iot_deck_counter {
-    position: absolute;
-    top: 50px;
-    font-size: 5rem;
+    position: re;
+    font-size: 100px;
     font-weight: 800;
     text-shadow: .05rem 0 .05rem whitesmoke, 0 -.05rem .05rem whitesmoke, 0 .05rem .05rem whitesmoke, -.05rem 0 .05rem whitesmoke;
     z-index: 100;
@@ -123,11 +157,11 @@ html {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 #iot_discard {
-    --gap: -346px;
+    --gap: -263px;
     position: relative;
     display: flex;
     flex-flow: row wrap;
@@ -167,17 +201,23 @@ html {
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    width: 99%;
 }
 
 /* Player Tableau Layout */
+#iot_player_tableaus {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
 .iot-player-tableau {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    align-items: center;
-    gap: 25px;
-    width: 99%;
+    align-items: flex-end;
+    gap: 10px;
 }
 
 .iot-player-header {
@@ -229,13 +269,13 @@ html {
 .iot-hand-card-count-container {
     display: grid;
     position: relative;
-    width: 71px;
-    height: 100px;
+    width: 53px;
+    height: 75px;
     place-content: center;
 }
 
 .iot-hand-card-counter {
-    font-size: 2rem;
+    font-size: 50px;
     font-weight: 800;
     text-shadow: .05rem 0 .05rem whitesmoke, 0 -.05rem .05rem whitesmoke, 0 .05rem .05rem whitesmoke, -.05rem 0 .05rem whitesmoke;
 }
@@ -252,6 +292,12 @@ html {
     font-size: 1.5rem;
     font-weight: 800;
     text-shadow: .05rem 0 .05rem whitesmoke, 0 -.05rem .05rem whitesmoke, 0 .05rem .05rem whitesmoke, -.05rem 0 .05rem whitesmoke;
+}
+
+.iot-player-passenger-area {
+    display: flex;
+    position: relative;
+    align-items: flex-end;
 }
 
 .iot-player-train {
@@ -281,8 +327,8 @@ html {
 .iot-card {
     display: inline-block;
     position: relative;
-    width: 346px;
-    height: 247px;
+    width: 259.5px;
+    height: 181px;
     border-radius: 10px;
     border: 1px solid;
     box-shadow: 1px 1px 1px 0 #000000a0;
@@ -343,17 +389,12 @@ div.iot-card:hover {
 .iot-destination-tile {
     display: inline-block;
     position: relative;
-    width: 313px;
-    height: 66px;
+    width: 235px;
+    height: 49.5px;
     border-radius: 15px;
     border: 1px solid;
     box-shadow: 1px 1px 1px 0 #000000a0;
     background-image: url('img/iotDestinationTiles.png');
-}
-
-div.iot-destination-tile:hover {
-    transform: scale(1.05);
-    z-index: 100;
 }
 
 .iot-destination-tile-alpine-lodge { background-position: 0 0; }
@@ -367,17 +408,12 @@ div.iot-destination-tile:hover {
 .iot-island-card {
     display: inline-block;
     position: relative;
-    width: 346px;
-    height: 247px;
+    width: 259.5px;
+    height: 181px;
     border-radius: 10px;
     border: 1px solid;
     box-shadow: 1px 1px 1px 0 #000000a0;
     background-image: url('img/iotIslandCards.png');
-}
-
-div.iot-island-card:hover {
-    transform: scale(1.05);
-    z-index: 100;
 }
 
 .iot-island-card-1 { background-position: 0 0; }
@@ -399,20 +435,22 @@ div.iot-island-card:hover {
 .iot-mini-card {
     display: inline-block;
     position: relative;
-    width: 71px;
-    height: 100px;
+    width: 53px;
+    height: 75px;
     border-radius: 5px;
     border: 1px solid;
     box-shadow: 1px 1px 1px 0 #000000a0;
     background-image: url('img/iotMiniCard.png');
+    margin-left: -16px;
+    margin-right: 20px;
 }
 
 /* Passengers */
 .iot-passenger {
     display: inline-block;
     position: relative;
-    width: 53.67px;
-    height: 75px;
+    width: 40.33px;
+    height: 56px;
     background-image: url('img/iotPassengers.png');
 }
 
@@ -421,12 +459,12 @@ div.iot-passenger:hover {
     z-index: 100;
 }
 
-.iot-passenger-6 { background-position: 0 0; }
-.iot-passenger-4 { background-position: 50% 0; }
-.iot-passenger-2 { background-position: 100% 0; }
-.iot-passenger-1 { background-position: 0 100%; }
-.iot-passenger-5 { background-position: 50% 100%; }
-.iot-passenger-3 { background-position: 100% 100%; }
+.iot-passenger-6 { background-position: 100% 100%; }
+.iot-passenger-4 { background-position: 50% 100%; }
+.iot-passenger-2 { background-position: 0 100%; }
+.iot-passenger-1 { background-position: 100% 0; }
+.iot-passenger-5 { background-position: 50% 0; }
+.iot-passenger-3 { background-position: 0 0; }
 
 /* Passenger Bag */
 .iot-passenger-bag {
@@ -479,26 +517,16 @@ div.iot-passenger:hover {
     background-image: url('img/iotTrain.png');
 }
 
-div.iot-progress-train:hover {
-    transform: scale(1.05);
-    z-index: 100;
-}
-
 /* Ticket Tiles */
 .iot-ticket-tile {
     display: inline-block;
     position: relative;
-    width: 313px;
-    height: 117px;
+    width: 235px;
+    height: 87.8px;
     border-radius: 5px;
     border: 1px solid;
     box-shadow: 1px 1px 1px 0 #000000a0;
     background-image: url('img/iotTicketTiles.png');
-}
-
-div.iot-ticket-tile:hover {
-    transform: scale(1.05);
-    z-index: 100;
 }
 
 .iot-ticket-tile-1 { background-position: 0 0; }
@@ -516,10 +544,11 @@ div.iot-ticket-tile:hover {
     display: inline-block;
     position: relative;
     text-align: center;
-    width: 88px;
-    height: 80px;
+    width: 54px;
+    height: 60px;
     top: 13px;
     left: 19px;
+    margin-right: 14px;
 }
 
 /* Weight */
